@@ -37,15 +37,15 @@ public class IterableTest {
 
     @Test
     public void shouldEqIterableAndJavaIterable() {
-        assertThat(List.ofAll(1, 2, 3).eq(Arrays.asList(1, 2, 3))).isTrue();
+        assertThat(List.of(1, 2, 3).eq(Arrays.asList(1, 2, 3))).isTrue();
     }
 
     @Test
     public void shouldEqNestedIterables() {
         // ((1, 2), ((3)))
-        final Iterable<?> i1 = List.ofAll(List.ofAll(1, 2), Collections.singletonList(List.of(3)));
-        final Iterable<?> i2 = Queue.ofAll(Stream.ofAll(1, 2), List.of(Lazy.of(() -> 3)));
-        final Iterable<?> i3 = Queue.ofAll(Stream.ofAll(1, 2), List.of(List.ofAll()));
+        final Iterable<?> i1 = List.of(List.of(1, 2), Collections.singletonList(List.of(3)));
+        final Iterable<?> i2 = Queue.of(Stream.of(1, 2), List.of(Lazy.of(() -> 3)));
+        final Iterable<?> i3 = Queue.of(Stream.of(1, 2), List.of(List.of()));
         assertThat(i1.eq(i2)).isTrue();
         assertThat(i1.eq(i3)).isFalse();
     }
